src-tauri/check_runner_ext.txt
cargo :    Compiling fireworks-collaboration v0.1.0 (C:\Users\34404\Documents\GitHub\fireworks-collaboration\src-tauri)
所在位置 行:1 字符: 1
+ cargo check --lib 2>&1 | Out-File -Encoding UTF8 check_runner_ext.txt ...
+ ~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling fi...tion\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0599]: no variant or associated item named `Cancelled` found for enum `ErrorCategory` in the current scope
  --> src\core\git\default_impl\clone.rs:62:49
   |
62 |         return Err(GitError::new(ErrorCategory::Cancelled, "Clone cancelled"));
   |                                                 ^^^^^^^^^ variant or associated item not found in `ErrorCategory`
   |
  ::: src\core\git\errors.rs:4:1
   |
4  | pub enum ErrorCategory {
   | ---------------------- variant or associated item `Cancelled` not found for this enum
   |
help: there is a variant with a similar name
   |
62 -         return Err(GitError::new(ErrorCategory::Cancelled, "Clone cancelled"));
62 +         return Err(GitError::new(ErrorCategory::Cancel);
   |

error[E0599]: no variant or associated item named `Cancelled` found for enum `ErrorCategory` in the current scope
  --> src\core\git\default_impl\fetch.rs:44:49
   |
44 |         return Err(GitError::new(ErrorCategory::Cancelled, "Fetch cancelled"));
   |                                                 ^^^^^^^^^ variant or associated item not found in `ErrorCategory`
   |
  ::: src\core\git\errors.rs:4:1
   |
4  | pub enum ErrorCategory {
   | ---------------------- variant or associated item `Cancelled` not found for this enum
   |
help: there is a variant with a similar name
   |
44 -         return Err(GitError::new(ErrorCategory::Cancelled, "Fetch cancelled"));
44 +         return Err(GitError::new(ErrorCategory::Cancel);
   |

error[E0277]: the trait bound `Arc<(dyn GitRunner + std::marker::Send + Sync + 'static)>: GitRunner` is not satisfied
   --> src\core\git\default_impl\mod.rs:115:13
    |
115 |             &self.runner,
    |             ^^^^^^^^^^^^ the trait `GitRunner` is not implemented for `Arc<(dyn GitRunner + std::marker::Send + Sync + 'static)>`
    |
    = help: the trait `GitRunner` is implemented for `CliGitRunner`
    = note: required for the cast from `&Arc<(dyn GitRunner + std::marker::Send + Sync + 'static)>` to `&dyn GitRunner`

error[E0277]: the trait bound `Arc<(dyn GitRunner + std::marker::Send + Sync + 'static)>: GitRunner` is not satisfied
   --> src\core\git\default_impl\mod.rs:200:13
    |
200 |             &self.runner,
    |             ^^^^^^^^^^^^ the trait `GitRunner` is not implemented for `Arc<(dyn GitRunner + std::marker::Send + Sync + 'static)>`
    |
    = help: the trait `GitRunner` is implemented for `CliGitRunner`
    = note: required for the cast from `&Arc<(dyn GitRunner + std::marker::Send + Sync + 'static)>` to `&dyn GitRunner`

error[E0382]: use of moved value: `tx`
   --> src\core\git\runner.rs:113:14
    |
87  |         let (tx, rx) = std::sync::mpsc::channel();
    |              -- move occurs because `tx` has type `std::sync::mpsc::Sender<(std::string::String, bool)>`, which does not implement the `Copy` trait
...
90  |         let t_out = thread::spawn(move || {
    |                                   ------- value moved into closure here
91  |             let reader = BufReader::new(stdout);
92  |             for line in reader.lines() {
    |             -------------------------- inside of this loop
93  |                 if let Ok(l) = line {
94  |                     if tx.send((l, false)).is_err() {
    |                        -- variable moved due to use in closure
...
113 |         drop(tx);
    |              ^^ value used here after move
    |
help: consider moving the expression out of the loop so it is only moved once
    |
92  ~             let mut value = tx.send((l, false));
93  ~             for line in reader.lines() {
94  |                 if let Ok(l) = line {
95  ~                     if value.is_err() {
    |

error[E0382]: use of moved value: `tx_err`
   --> src\core\git\runner.rs:114:14
    |
88  |         let tx_err = tx.clone();
    |             ------ move occurs because `tx_err` has type `std::sync::mpsc::Sender<(std::string::String, bool)>`, which does not implement the `Copy` trait
...
101 |         let t_err = thread::spawn(move || {
    |                                   ------- value moved into closure here
102 |             let reader = BufReader::new(stderr);
103 |             for line in reader.lines() {
    |             -------------------------- inside of this loop
104 |                 if let Ok(l) = line {
105 |                     if tx_err.send((l, true)).is_err() {
    |                        ------ variable moved due to use in closure
...
114 |         drop(tx_err); // Wait, tx_err was moved. tx was moved. I need to make sure I don't hold a sender.
    |              ^^^^^^ value used here after move
    |
help: consider moving the expression out of the loop so it is only moved once
    |
103 ~             let mut value = tx_err.send((l, true));
104 ~             for line in reader.lines() {
105 |                 if let Ok(l) = line {
106 ~                     if value.is_err() {
    |

Some errors have detailed explanations: E0277, E0382, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `fireworks-collaboration` (lib) due to 6 previous errors
